--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -1,44 +1,23 @@
 {% extends 'spa_core/base.html' %}
 {% block content %}
 <section>
-	<h2 class="mt-5 pl-5">Page Information</h2>
-	<article class="mt-5 pt-5 container bg-blue-trans">
-		<div class="row">
-			<div class="col-1  "></div>
-			<div class="col-4 bg-white  mail-but d-flex align-items-center justify-content-center">
-				<p>
-					<a href="https://docs.google.com/document/d/17CtaIb-c2ylt5iEky9Y3fHiIh-EipxYPcT_qPN4f71c/edit?usp=sharing" target="_blank">Foire aux questions </a>
-				</p>
-			</div>
+	<h2 class="">Page Information</h2>
+	<article class="info">
+		<p class=" faq">
+			<a href="https://docs.google.com/document/d/17CtaIb-c2ylt5iEky9Y3fHiIh-EipxYPcT_qPN4f71c/edit?usp=sharing" target="_blank">Foire aux questions </a>
+		</p>
 
-			<div class="col-2 "></div>
-			<div class="col-4 bg-white  mail-but very-center">
-				<p>Tutoriel Vidéo (à venir)</p>
-			</div>
-			<div class="col-1 "></div>
-		</div>
-		<div class="col-12  mail-but"></div>
-		<div class="row">
-			<div class="col-1 "></div>
-			<div class="col-4 bg-white  mail-but very-center">
-				<p><a href="{% url 'info:legal_notice'%}">A propos de l'app</a></p>
-			</div>
-			<div class="col-2 "></div>
-			<div class="col-4 bg-white  mail-but very-center">
-				<p><a href="https://github.com/blingstand/projet13" target="_blank">Code Source</a></p>
-			</div>
-			<div class="col-1 "></div>
-		</div>
-		<div class="row mt-3">
-			<div class="col-3 "></div>
-			<div class="col-6  mail-but very-center">
-				<p>Application développée par <a href="http://35.180.64.180/cv/">Adrien Clupot</a></p>
-			</div>
-			<div class="col-3 "></div>
-			<div class="col-2  "></div>
+		<p class="tuto ">Tutoriel Vidéo (à venir)</p>
+
+		<p class=" legal-notice"><a href="{% url 'info:legal_notice'%}">A propos de l'app</a></p>
+
+		<p class="github-link ">
+			<a href="https://github.com/blingstand/projet13" target="_blank">Code Source</a>
+		</p>
+		<div class="container-about">
+			<p class="about ">Application développée par <a href="http://35.180.64.180/cv/">Adrien Clupot</a></p>
 		</div>
 
-	</div>
-</article>
+	</article>
 </section>
 {%endblock%}
