--- a/info/templates/info/legal_notice.html
+++ b/info/templates/info/legal_notice.html
@@ -1,35 +1,65 @@
 {% extends 'spa_core/base.html' %}
 {% block content %}
-<section class="max-scrolable-y">
-	<article>
-		<h1>Contexte</h1>
-		<p class="alinea">Ce projet a été créé pour répondre aux exigence du <strong>projet 13</strong> de la formation <a href="https://openclassrooms.com/fr/paths/68-developpeur-dapplication-python">Openclassroom parcours Python</a>. Il s'agit de <strong>mettre en oeuvre toutes mes compétences pour répondre aux besoins d'une association </strong>que je souhaite aider. Dans mon cas <a href="https://www.spa24bergerac.org/">le centre spa</a> de ma ville</p>
-		<p class="alinea">Ma démarche a consisté à aller à la <strong>rencontre</strong> de ce centre et de me <strong>renseigner</strong> sur la manière dont il fonctionne. J'ai eu un rendez-vous avec ces membres. Lors de la présentation j'ai remarqué quelques points sur lesquels je pouvais <strong>faire gagner du temps</strong> au secrétariat en <strong>automatisant</strong> certaines tâches de leur journée.</p>
-		<ol>
-			<li class="ml-4 pl-2">Mettre en évidence le travail à faire dans la journée, </li>
-			<li class="ml-4 pl-2">Donner rapidement accès à des données,</li>
-			<li class="ml-4 pl-2">Automatiser l'envoi de mail suite à une modification de la base.</li>
-		</ol>
-		<p class="alinea">L'application que je propose à cette association traite du <strong>suivi de la stérilisation </strong>suite à une adoption. Légalement une personne doit stériliser l'animal qu'elle acquiert. Dans certain cas cette stérilisation doit avoir lieue <strong>après l'adoption</strong>. Cela nécessite un suivi qui peut être chronophage. Mon application veut <strong>limiter le temps à effectuer du suivi</strong> en limitant l'action humaine a des tâches complexes et en la libérant des tâches répétitives. 
-		</p>	
-	</article>
-	<article>
-		<h1>Hébergement</h1>
-		<p class="alinea">L'application SPA est hébergée par <a href="https://www.heroku.com/">Heroku</a>.</p>
-		<p class="alinea">Heroku est un service de cloud computing de type plate-forme en tant que service.</p>
-		<p class="alinea">Numéro de téléphone : 1-800-667-6389</p>
-		<ol>
-			<li class="ml-4 pl-2">Salesforce</li>
-			<li class="ml-4 pl-2">50 Fremont St.</li>
-			<li class="ml-4 pl-2">Suite 300</li>
-			<li class="ml-4 pl-2">San Francisco, CA 94105</li>
-		</ol>
-	</article>
-	<article>
-		<h1>Images</h1>
-		<p> lien de l'oeil : https://findicons.com/icon/download/117128/eye/16/png</p>
-	</article>
-</section>
+
+<h2 class="">Page A Propos</h2>
+<article class="legal-notice">
+	<div class="container-top">
+		<header class="title">
+			<h1 >Contexte</h1>
+		</header>
+		<div class="container">
+			<p class="text-content">Ce projet a été créé pour répondre aux exigence du <strong>projet 13</strong> de la formation <a href="https://openclassrooms.com/fr/paths/68-developpeur-dapplication-python">Openclassroom parcours Python</a>. Il s'agit de <strong>mettre en oeuvre toutes mes compétences pour répondre aux besoins d'une association </strong>que je souhaite aider. Dans mon cas <a href="https://www.spa24bergerac.org/">le centre spa</a> de ma ville</p>
+			<p class="text-content">Ma démarche a consisté à aller à la <strong>rencontre</strong> de ce centre et de me <strong>renseigner</strong> sur la manière dont il fonctionne. J'ai eu un rendez-vous avec ces membres. Lors de la présentation j'ai remarqué quelques points sur lesquels je pouvais <strong>faire gagner du temps</strong> au secrétariat en <strong>automatisant</strong> certaines tâches de leur journée.</p>
+			<ol>
+				<li class="ml-4 pl-2">Mettre en évidence le travail à faire dans la journée, </li>
+				<li class="ml-4 pl-2">Donner rapidement accès à des données,</li>
+				<li class="ml-4 pl-2">Automatiser l'envoi de mail suite à une modification de la base.</li>
+			</ol>
+			<p class="text-content">L'application que je propose à cette association traite du <strong>suivi de la stérilisation </strong>suite à une adoption. Légalement une personne doit stériliser l'animal qu'elle acquiert. Dans certain cas cette stérilisation doit avoir lieue <strong>après l'adoption</strong>. Cela nécessite un suivi qui peut être chronophage. Mon application veut <strong>limiter le temps à effectuer du suivi</strong> en limitant l'action humaine a des tâches complexes et en la libérant des tâches répétitives. 
+			</p>
+		</div>	
+	</div>
+	<div class="container-mid">
+		<header class="title">
+			<h1 >Hébergement</h1>
+		</header>
+		<div class="container">
+			<p class="text-content">L'application SPA est hébergée par <a href="https://www.heroku.com/">Heroku</a>.</p>
+			<p class="text-content">Heroku est un service de cloud computing de type plate-forme en tant que service.</p>
+			<p class="text-content">Numéro de téléphone : 1-800-667-6389</p>
+			<ol>
+				<li class="">Salesforce</li>
+				<li class="">50 Fremont St.</li>
+				<li class="">Suite 300</li>
+				<li class="">San Francisco, CA 94105</li>
+			</ol>
+		</div>
+	</div>
+	<div class="container-bot">
+		<header class="title">
+			<h1 >Image</h1>
+		</header>
+		<div class="container">
+			<p> lien de l'oeil : https://findicons.com/icon/download/117128/eye/16/png</p>
+		</div>
+	</div>
+</article>
+<script>
+	//variables 
+	const titles = Array.from(document.getElementsByClassName('title'))
+	const containers = document.getElementsByClassName('container') 
+	//functions 
+
+	//events 
+	titles.forEach((elem) => {
+		elem.onclick = (e) =>{
+			target = e.target.tagName
+			header = target == 'HEADER' ? e.target : e.target.parentElement
+			container = header.nextElementSibling
+			container.classList.toggle('d-block')
+		}
+	})
+</script>
 {% endblock %}
 
 
