--- a/spa_core/static/spa_core/css/split/mail-content.scss
+++ b/spa_core/static/spa_core/css/split/mail-content.scss
@@ -14,8 +14,10 @@
 			.field{
 				@extend .content-centered; 
 				input[type="text"]{
-					border-radius: 0; 
+					border-radius: 1rem 1rem 0 0;
+					padding: 0 1rem;
 					width: 90%;
+					height: 2rem;
 					border: 1px black solid;
 				}
 				&:last-child{
@@ -46,8 +48,11 @@
 						margin-bottom: 0.7rem; 
 					}
 					select{
+						border-radius: 1rem 1rem 0 0; 
 						font-size: 0.6rem; 
 						width: 14rem;
+						font-size: 0.9rem; 
+						height: 2rem; 
 						cursor: pointer; 
 						&:hover{
 							font-weight: bold; 
