--- a/spa_core/static/spa_core/css/split/mail-settings.scss
+++ b/spa_core/static/spa_core/css/split/mail-settings.scss
@@ -1,5 +1,6 @@
 @mixin load-mail-settings(){
 	header{
+		background-color: $secondary;
 		h2{
 			text-align: center; 
 			font-size: 2rem; 
@@ -14,61 +15,68 @@
 		$width: 70%;
 		height: 60vh;
 		background-color: $secondary;
-		.container-wish{
+
+
+		.container-top, .container-middle, .container-bot{
 			width : 100%;
 			@extend .content-centered; 
-			.wish{
-				width : $width;
-				height: 4rem;
-				background-color: $third_color;
-				border-radius: 2rem 2rem 0 0; 
-				@extend .content-centered; 
-				padding: 1rem; 
-				cursor:pointer;
-
-			}
 		}
-		.container-form{
-			width: 100%;
-			@extend .content-centered;
-			.form-settings{
-				background-color: $primary;
-				width : $width;
-				display: grid;
-				grid-template-rows: 1fr 4rem;
-				ul#id_frequency{
-					list-style-type: none;
-					padding: 1rem 0;
-					li{
-						font-size: 1.5rem; 
-						&:hover{
-							font-weight: bold; 
-						}
-						& input[type="radio"]{
-							margin: 0 1rem; 
-						}
-						label{
-							cursor: pointer;
-						}
+		.container-top{
+			margin-bottom: 0.5rem; 
+		}
+		.container-bot{
+			margin-top: 0.5rem; 
+		}
+		.wish{
+			border: 1px black solid; 
+			width : $width;
+			height: 4rem;
+			background-color: $third_color;
+			border-radius: 2rem 2rem 0 0; 
+			@extend .content-centered; 
+			padding: 1rem; 
+			cursor:pointer;
+		}
+		.form-settings{
+			background-color: $primary;
+			width : $width - 4%;
+			display: grid;
+			ul#id_condition{
+				list-style-type: none;
+				padding: 1rem 0;
+				li{
+					font-size: 1.5rem; 
+					&:hover{
+						font-weight: bold; 
 					}
-				}
-				.container-input{
-					width: 100%;
-					height: 100%; 
-					background-color: $third_color;
-					@extend .content-centered;
-					input[type="submit"]{
-						width: 12rem;
-						height: 3rem;
-						background-color: #fff;
-						border-radius: 0 0 2rem 2rem; 
-						font-size: 1.3rem; 
+					& input[type="radio"]{
+						margin: 0 1rem; 
+						height: 1rem;
+						width: 1rem;
+					}
+					label{
 						cursor: pointer;
 					}
-					.verif{}
 				}
-			}	
+			}
+		}	
+		.container-input{
+			border: 1px black solid; 
+			width: $width; 
+			height: 4rem;
+			background-color: $third_color;
+			@extend .content-centered;
+			input[type="submit"]{
+				width: 12rem;
+				height: 3rem;
+				background-color: #fff;
+				border-radius: 0 0 2rem 2rem; 
+				font-size: 1.3rem; 
+				cursor: pointer;
+			}
 		}
+
+
 
 	}
 }
