refactoring sheet views, correct send mail bug

--- a/sheet/templates/sheet/form_anim.html
+++ b/sheet/templates/sheet/form_anim.html
@@ -242,7 +242,8 @@
 
     }
     plusIcon.onclick = () => {
-    	OpenSmallPageOwner('add')
+    	url_open = "{% url 'sheet:add_owner_open'%}"; 
+        OpenSmallPageOwner(url_open)
     }
 
     myForm.onsubmit = () => {
